--- a/drum-machine/src/App.css
+++ b/drum-machine/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background-image: url("https://image.freepik.com/free-vector/boy-playing-batery-background_23-2148084722.jpg");
+  padding: 20px;
 }
 
 .App-header {
@@ -10,7 +12,6 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .needGrid {
@@ -21,16 +22,49 @@
   border: 1px solid salmon;
 }
 
-.drum-pad {
-  width: 100px;
-  margin: 5px;
+.outer-drum-pad {
+  width: 350px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0 auto;
+  padding: 30px;
+  background-color: #56c2a9;
 }
 
-.oneKeyboard {
+.inner-drum-pad {
   width: 75px;
   height: 75px;
   padding: 10px;
-  background-color: rgb(114, 59, 59);
-  color: white;
+  margin: 10px;
+  /* background-color: #D4D5D7; */
   border-radius: 8px;
+  -webkit-box-shadow: 13px 14px 26px -12px rgba(0,0,0,0.67);
+  -moz-box-shadow: 13px 14px 26px -12px rgba(0,0,0,0.67);
+  box-shadow: 13px 14px 26px -12px rgba(0,0,0,0.67);
+}
+
+.drumboard {
+  background-color: #562923;
+  color: white;
+  width: 350px;
+  margin: 30px auto;
+  padding: 30px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.inner-display {
+  width: 150px;
+  height: 50px;
+  padding: 10px;
+  margin: 10px auto;
+  color: black;
+  line-height: 50px;
+  background-color: #D4D5D7;
+  border-radius: 8px;
+  -webkit-box-shadow: 13px 14px 26px -12px rgba(0,0,0,0.67);
+  -moz-box-shadow: 13px 14px 26px -12px rgba(0,0,0,0.67);
+  box-shadow: 13px 14px 26px -12px rgba(0,0,0,0.67);
 }
